# Hunter-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  tmp_skills.txt
docs/: codex_weekly_arxiv_workflow.md  openclaw-protocol.md
docs/schemas/: arxiv_robotics_daily_output.schema.json  skill_a_input.schema.json  skill_a_output.schema.json  skill_b_find_output.schema.json  skill_b_input.schema.json  skill_b_upsert_output.schema.json  talent_profile.schema.json
examples/: arxiv_robotics_daily_input.json  sample_author_enrichment_payload.json  sample_bulk_profiles.json  sample_profile.json
scripts/: apply_week_2026_01_05_2026_01_11_enrichment.py  enrich_week_2026_01_05_2026_01_11.py  setup.ps1  sync-openclaw.ps1
skills/arxiv-robotics-daily/: SKILL.md
skills/arxiv-robotics-daily/agents/: openai.yaml
skills/arxiv-robotics-daily/scripts/: run.py
skills/talent-db-sync/: SKILL.md
skills/talent-db-sync/agents/: openai.yaml
skills/talent-db-sync/scripts/: run.py
src/hunter_agent/: __init__.py  __main__.py  cli.py  config.py
src/hunter_agent/arxiv/: __init__.py  client.py  parser.py  service.py
src/hunter_agent/common/: __init__.py  enums.py  schemas.py  utils.py
src/hunter_agent/db/: models.py  repo.py  sqlite.py
tests/: support.py  test_arxiv_client_timezone.py  test_arxiv_html_parser.py  test_arxiv_range_authors.py  test_arxiv_robotics_daily_collector.py  test_arxiv_robotics_daily_collector_integration.py  test_cli.py  test_export.py  test_skill_a.py  test_skill_a_integration.py  test_skill_b.py  test_talent_database_sync.py
(+11 files in other folders)
