[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-agent"
version = "0.1.0"
description = "Embodied AI talent discovery pipeline for OpenClaw skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.0",
  "openpyxl>=3.1.0",
  "tzdata>=2025.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
