[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-agent"
version = "0.1.0"
description = "Embodied AI talent discovery CLI for Codex workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.0",
  "tzdata>=2025.1",
]

[project.scripts]
hunter-agent = "hunter_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
